<resources>
    <string name="type_price">Tipo de precio</string>
    <string name="type_order">Tipo de ordenación</string>
    <string name="order_by_precio">Ordenar por precio</string>
    <string name="app_name">App Gasolineras</string>
    <string name="gasolina95label">Gasolina</string>
    <string name="dieselAlabel">Diésel</string>
    <string name="refresh">Recargar</string>
    <string name="info">Info</string>
    <string name="loadCorrectOn">Se han cargado %d gasolineras actualizadas.</string>
    <string name="loadCorrectOff">Se han cargado %d gasolineras. Desactualizadas con fecha %s.</string>
    <string name="loadCorrectPromociones">Se han cargado %d promociones.</string>
    <string name="loadError">Ha habido un error cargando las gasolineras</string>
    <string name="prices">Precios</string>
    <string name="schedule">Horario</string>
    <string name="sumPrice">Precio Sumario</string>
    <string name="ascending">Asc.</string>
    <string name="descending">Desc.</string>
    <string name="error">Error</string>
    <string name="no_detail_info">Ha habido un error cargando la información en detalle de la gasolinera.</string>
    <string name="accept">Aceptar</string>
    <string name="apply">Aplicar</string>
    <string name="cancel">Cancelar</string>
    <string name="filter">Filtrar gasolineras</string>
    <string name="promotion">Menu promociones</string>
    <string name="addPromotion">Añadir promoción</string>
    <string name="listPromotions">Ver promociones</string>
    <string name="loadErrorPromociones">Ha habido un error cargando las promociones</string>
    <string name="combustible_types">Tipos de combustible</string>
    <string name="brands">Marcas</string>
    <string name="all">Todos</string>
    <string name="all_fem">Todas</string>
    <string name="galp">Galp</string>
    <string name="cepsa">Cepsa</string>
    <string name="carrefour">Carrefour</string>
    <string name="campsa">Campsa</string>
    <string name="avia">Avia</string>
    <string name="petronor">Petronor</string>
    <string name="repsol">Repsol</string>
    <string name="shell">Shell</string>
    <string name="petroprix">Petroprix</string>
    <string name="easygas">Easygas</string>
    <string name="beroil">Beroil</string>
    <string name="ballenoil">Ballenoil</string>
    <string name="meroil">Meroil</string>
    <string name="varias">Varias</string>
    <string name="varios">Varios</string>
    <string name="loadErrorEmpty">No hay gasolineras compatibles.</string>
    <string name="preference_filter_file_key_">AppFilterPreference</string>
    <string name="saved_comb_type_filter">TipoCombustible</string>
    <string name="saved_lowcost_sele">Seleccion lowcost</string>
    <string name="saved_marca_type_filter">TipoMarca</string>
    <string name="saved_price_type_order">PriceType</string>
    <string name="saved_price_order">OrderType</string>
    <string name="nuevaPromocion">NUEVA PROMOCIÓN</string>
    <string name="name">Nombre</string>
    <string name="indicacionNombre">Introduzca el nombre de la promoción.</string>
    <string name="anhadir">Añadir</string>
    <string name="BiodieselAlabel">Biodiesel</string>
    <string name="BioetanolAlabel">Bioetanol</string>
    <string name="GasNaturalComprimidolabel">Gas natural comprimido</string>
    <string name="GasNaturalLicuadolabel">Gas natural licuado</string>
    <string name="GasesLicuadosDelPetroleolabel">Gas licuado del petróleo</string>
    <string name="GasoleoAlabel">Gasóleo A</string>
    <string name="GasoleoBlabel">Gasóleo B</string>
    <string name="GasoleoPremiumlabel">Gasóleo premium</string>
    <string name="Gasolina95E10label">Gasolina 95 E10</string>
    <string name="Gasolina95E5label">Gasolina 95 E5</string>
    <string name="Gasolina95E5Premiumlabel">Gasolina 95 E5 premium</string>
    <string name="Gasolina98E10label">Gasolina 98 E10</string>
    <string name="Gasolina98E5label">Gasolina 98 E5</string>
    <string name="Hidrogenolabel">Hidrógeno</string>
    <string name="PorMarcalabel">Por marca</string>
    <string name="PorGasolineralabel">Por gasolinera</string>
    <string name="EurosPorLitrolabel">€/L</string>
    <string name="Porcentajelabel">%</string>
    <string name="allA">Todas</string>


    <string-array name="combustible_types_array">
        <item>@string/all</item>
        <item>@string/dieselAlabel</item>
        <item>@string/gasolina95label</item>
    </string-array>

    <string-array name="price_type_order_array">
        <item>@string/dieselAlabel</item>
        <item>@string/gasolina95label</item>
        <item>@string/sumPrice</item>
    </string-array>

    <string-array name="price_order_array">
        <item>@string/ascending</item>
        <item>@string/descending</item>
    </string-array>

    <string-array name="combustible_types_array_nall">
        <item>@string/dieselAlabel</item>
        <item>@string/gasolina95label</item>
    </string-array>

    <string-array name="brands_types_array">
        <item>@string/avia</item>
        <item>@string/campsa</item>
        <item>@string/carrefour</item>
        <item>@string/cepsa</item>
        <item>@string/galp</item>
        <item>@string/petronor</item>
        <item>@string/repsol</item>
        <item>@string/shell</item>
        <item>@string/petroprix</item>
        <item>@string/easygas</item>
        <item>@string/beroil</item>
        <item>@string/ballenoil</item>
        <item>@string/meroil</item>
    </string-array>

    <string-array name="empty_array">
        <item>-</item>
    </string-array>

    <string-array name="selectors_types_array">
        <item>@string/allA</item>
        <item>@string/PorMarcalabel</item>
        <item>@string/PorGasolineralabel</item>
    </string-array>

    <string-array name="type_descuento_array">
        <item>@string/EurosPorLitrolabel</item>
        <item>@string/Porcentajelabel</item>
    </string-array>

    <string name="informacion">Información</string>
    <string name="promoExito">Promoción añadida con éxito.</string>
    <string name="promoRepe">Ya existe una promoción con ese nombre.</string>
    <string name="promoSinComb">No se han indicado combustibles.</string>
    <string name="promoSinGas">No se han indicado gasolineras.</string>
    <string name="promoSinDesc">No se ha indicado un descuento.</string>
    <string name="promoPorcErr">El porcentaje indicado no es válido.</string>
    <string name="promoEuroLErr">El descuento en €/L indicado no es válido.</string>
    <string name="promoBDErr">Se ha producido un error al acceder a la base de datos.</string>

    <string name="lowcost">Mostrar solo low-cost</string>
    <string name="consideraLowcost">Gasolineras consideradas low-cost</string>

    <string name="marcasLowcost">Marcas Low-cost</string>
    <string name="instLowcost">Se consideran gasolineras low-cost aquellas que se corresponden con
    las siguientes marcas:</string>

    <string name="ordenarPrecio">Ordenar por precio</string>

</resources>