...
                android:id="@+id/menuListaPromociones"
                android:title="@string/listPromotions" />
        </menu>
    </item>

    <item
        android:id="@+id/menuOrder"
        android:icon="@drawable/order_by"
        android:title="Ordenar por"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuOrdenarPorPrecio"
                android:title="@string/ordenarPrecio" />

...
